- add pymc/emcee/dynesty example to show how to use all three packages to
  sample a posterior.
- add jax function for smeared reflectivity.
- optimisation of ReflectModelTL.
- add refnx.reflect._cyreflect.abeles_vectorised, a vectorised reflectivity
  calculator with optional parallelisation

0.1.46
------
- Fix bug in ReflectModelTL when numpy2 is installed.
- Added an example of incoherent summing in the documentation.
- Added `reflect.FunctionalForm` for Functional profiles. This was previously
  only present in refnx-models.

0.1.47
------
- added vectorised reflectivity calculator,
  `refnx.reflect._creflect.abeles_vectorised`. This is mainly of use for
  external programs, it's not used internally yet.
- Fix Parameter constraints that themselves depended on Parameters constrained
  with functions.

0.1.48
------
- Improve documentation for resolution smearing options in ReflectModel.
- Added refnx.reflect.create_occupancy, a helper function for creating occupancy
  (volume fraction) profiles.
- Added codesigning for macOS thanks to the
  International Scattering Association (ISA). This means that the refnx app
  open a lot more easily on macOS, as it's not stopped by Gatekeeper.

0.1.49
------
- rudimentary exporter of a Structure to an ORSO model language file,
  `Structure.to_orso()`. Can only export Structures made of Slabs at the
  moment.
- fixed bug in SpatzNexus.chod(). Repeat calls to this method would result
  in increasing values because an array value wasn't being dereferenced.
- Fix several DeprecationWarnings emitted during tests.
- Fix numpy deprecation warning for `Parameters.__array__`. This method is
  used to quickly extract the parameter set into a numpy array. This magic
  method now requires the copy and dtype keywords, which we ignore in our
  implementation.

0.1.50
------
- put black configuration in pyproject.toml
- put ruff configuration in pyproject.toml
- fix bug in ManualBeamFinder, must be a matplotlib thing