@@ -33,7 +33,7 @@ from refnx.reflect.interface import (
     Step,
 )
 from refnx.reflect.spline import Spline
-from refnx.reflect._lipid import LipidLeaflet
+from refnx.reflect._lipid import LipidLeaflet, LipidLeafletGuest
 from refnx.reflect._functional_form import FunctionalForm
 from refnx._lib._testutils import PytestTester
 from refnx.reflect._app import gui, main
